<resources>
    <string name="app_name">TrolleyHood</string>
    <string name="sing_in">Sing In</string>
    <string name="create_acc">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="todo">TODO</string>
    <string name="string_todo">todo</string>
    <string name="help">help your neighbours</string>
    <string name="ask">ask for help</string>
    <string name="title_activity_maps">Map</string>
    <string name="set_location">SET LOCATION</string>
    <string name="street_">Street:</string>
    <string name="street">Street</string>
    <string name="no">no.</string>
    <string name="building">Building no.:</string>
    <string name="apartment">Apartment no.:</string>
    <string name="set_marker">SET MARKER ON YOUR LOCATION</string>
    <string name="search_address">Find your address</string>
    <string name="confirm_location">Confirm location</string>
    <string name="city_">City:</string>
    <string name="city">City</string>
    <string name="ask_for_shopping">Ask for shopping</string>
    <string name="help_your_neighbours">Help your neighbours</string>
    <string name="settings">Settings</string>
    <string name="select_neighbour">SELECT NEIGHBOUR</string>
    <string name="change_name">change name</string>
    <string name="change_address">Change address</string>
    <string name="change_phone">Change phone</string>
    <string name="log_out">Log out</string>
    <string name="prepare_sl">prepare your shopping list</string>
    <string name="set_q">SET QUANTITY</string>
    <string name="cart">CART</string>
    <string name="meat">meat</string>
    <string name="sweet">sweet</string>
    <string name="bread">bread</string>
    <string name="fish">fish</string>
    <string name="drinks">drinks</string>
    <string name="cosmetics">cosmetics</string>
    <string name="dry">dry</string>
    <string name="fruits">fruits</string>
    <string name="dairy">dairy</string>
    <string name="vegetables">vegetables</string>
    <string name="title_activity_setting_qty">SettingQty</string>
    <string name="set">set</string>
    <string name="order">make an order</string>
    <string name="takeorder">take the order</string>
    <string name="empty"></string>
    <string name="my_order">MY ORDER</string>
    <string name="takenorders">ORDERS TO DO</string>
    <string name="waiting">WAITING FOR HELP</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>