<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c3">

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/c2"
        android:textSize="24sp"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/c2"
        app:strokeWidth="3dp" />

    <ImageView
        android:id="@+id/imageViewHelp"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/help_your_neighbours"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help" />

    <ImageView
        android:id="@+id/imageViewAsk"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ask_for_shopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHelp"
        app:srcCompat="@drawable/ask" />
</androidx.constraintlayout.widget.ConstraintLayout>